--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/participant_select.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/participant_select.html
@@ -2,6 +2,12 @@
 {% block body %}
     <h1>Administration</h1>
     <h2>Participant Records</h2>
+
+    <p>
+        Click a participant's name below to see their detailed record displaying
+         all of the participant's information.
+    </p>
+
     <ul>
         {% for participant in participants %}
             <li>
