[re #94] Made appropriate changes to seizure, medical_release, session_plan, and rider_eval_checklist templates after adding textarea boxes

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
@@ -1241,7 +1241,7 @@
         <div id="section_overall_comments">
           <div id="comments">
             <p>
-                <b><u>Overall Comments:</u></b> {{ form.comments }}
+                <b><u>Overall Comments:</u></b> <br /> {{ form.comments }}
                 <span class="error_message">
                     {{ form.comments.errors.as_text }}
                 </span>
