--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/medical_release.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/medical_release.html
@@ -45,7 +45,9 @@
             <span class="error_message">
                 {{ form.last_seen_by_physician_date.errors.as_text }}
             </span>
-            Reason: {{ form.last_seen_by_physician_reason }}
+            <br />
+            <br />
+            Reason: <br /> {{ form.last_seen_by_physician_reason }}
             <span class="error_message">
                 {{ form.last_seen_by_physician_reason.errors.as_text }}
             </span>
@@ -68,6 +70,7 @@
         </p>
         <p>
             If yes, please specify:
+            <br />
              {{ form.allergies_conditions_that_exclude_description }}
              <span class="error_message">
                  {{ form.allergies_conditions_that_exclude_description.errors.as_text }}
@@ -184,6 +187,7 @@
         </p>
         <p>
             If yes, please specify:
+            <br />
              {{ form.physical_or_mental_issues_affecting_riding_description }}
              <span class="error_message">
                  {{ form.physical_or_mental_issues_affecting_riding_description.errors.as_text }}
@@ -202,6 +206,7 @@
         </p>
         <p>
             If yes, please specify:
+            <br />
              {{ form.restriction_for_horse_activity_last_five_years_description }}
             <span class="error_message">
              {{ form.restriction_for_horse_activity_last_five_years_description.errors.as_text }}
@@ -238,6 +243,7 @@
         </p>
         <p>
             If yes, please specify:
+            <br />
              {{ form.limiting_surgeries_last_six_monthes_description }}
              <span class="error_message">
                  {{ form.limiting_surgeries_last_six_monthes_description.errors.as_text }}
