[Re #48] Added Rider Intake Assessment link to Private forms index page

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/private.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/private.html
@@ -7,6 +7,14 @@
          form.
     </p>
 
+    <h2 style="text-align: left">Rider Intake Assessment</h2>
+    <ul>
+        <li>
+            Click <a href="{% url 'private-form-intake-assessment' %}">here</a>
+             to conduct an Intake Assessment.
+         </li>
+    </ul>
+
     <h2 style="text-align:left">Observation Evaluation</h2>
     <ul>
         {% for participant in participants %}
