[Re #34] Cleaned up incidents.html and phone_log.html

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/phone_log.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/phone_log.html
@@ -15,7 +15,18 @@
             </p>
 
             <p>
-                <strong>Date:</strong> 
+                <strong>Date/Time:</strong> {{ form.date }}
+                <span class="error_message">
+                    {{ form.date.errors.as_text }}
+                </span>
+                <strong>Details:</strong> {{ form.details }}
+                <span class="error_message">
+                    {{ form.details.errors.as_text }}
+                </strong>
+            </p>
+
+            <p>
+                <input style="submit" value="Submit" />
             </p>
         </form>
     {% endif %}
