[Re #96] Fixed 'participant' object description in observation_evaluation.html

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -23,7 +23,7 @@
         {% csrf_token %}
 
         <p>
-            <strong>Participant:</strong> {{ participant }}
+            <strong>Participant:</strong> {{ participant.name }}
         </p>
         <p>
             <strong>Date:</strong> {{ form.date }}
