[Re #96] Added 'birth_date' object description to participant in observation_evaluation.html

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -23,7 +23,7 @@
         {% csrf_token %}
 
         <p>
-            <strong>Participant:</strong> {{ participant.name }}
+            <strong>Participant:</strong> {{ participant.name }} ({{ participant.birth_date }})
         </p>
         <p>
             <strong>Date:</strong> {{ form.date }}
