--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -9,6 +9,9 @@
     <form action="{% url 'public-form-application' %}" method="post">
         {% csrf_token %}
         <p>
+            Position applying for: {{ form.participant_type }}
+        </p>
+        <p>
             Name: {{ form.name }}
             <span class="error_message">
                 {{ form.name.errors.as_text }}
@@ -17,7 +20,9 @@
             <span class="error_message">
                 {{ form.birth_date.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             Height: {{ form.height_feet }}
             <span class="error_message">
                 {{ form.height_feet.errors.as_text }}
@@ -30,7 +35,9 @@
             <span class="error_message">
                 {{ form.weight.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             Gender: {{ form.gender }}
             <span class="error_message">
                 {{ form.gender.errors.as_text }}
@@ -39,19 +46,25 @@
             <span class="error_message">
                 {{ form.minor_status.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             School or Institution presently attending:
             {{ form.school_institution }}
             <span class="error_message">
                 {{ form.school_institution.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             If minor or adult with legal guardian, parent or legal guardian
             name(s): {{ form.guardian_name }}
             <span class="error_message">
                 {{ form.guardian_name.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             Street Address: {{ form.address_street }}
             <span class="error_message">
                 {{ form.address_street.errors.as_text }}
@@ -60,7 +73,9 @@
             <span class="error_message">
                 {{ form.address_city.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             State: {{ form.address_state }}
             <span class="error_message">
                 {{ form.address_state.errors.as_text }}
@@ -69,7 +84,9 @@
             <span class="error_message">
                 {{ form.address_zip.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             Home Phone: {{ form.phone_home }}
             <span class="error_message">
                 {{ form.phone_home.errors.as_text }}
@@ -78,17 +95,21 @@
             <span class="error_message">
                 {{ form.phone_cell.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             Work Phone: {{ form.phone_work }}
             <span class="error_message">
                 {{ form.phone_work.errors.as_text }}
             </span>
-            <br />
+        </p>
+
+        <p>
             E-Mail Address: {{ form.email }}
             <span class="error_message">
                 {{ form.email.errors.as_text }}
             </span>
-            <br />
+        </p>
             <!--Signature: {{ form.signature }}
             <span class="error_message">
                 {{ form.signature.errors.as_text }}
@@ -97,7 +118,8 @@
             <span class="error_message">
                 {{ form.date.errors.as_text }}
             </span>-->
+        <p>
+            <input type="Submit" value="Submit" />
         </p>
-        <input type="Submit" value="Submit" />
     </form>
 {% endblock %}
