[re #100] Made changes to html templates that looked ugly after increasing text sizes for mobile devices

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/background.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/background.html
@@ -27,10 +27,13 @@
          <span class="error_message">
                 {{ form.signature.errors.as_text }}
         </span>
-         <span style="color: red">*</span> Date: {{ form.date }}
+         <p>
+         <span style="color: red">*</span>
+         Date: {{ form.date }}
          <span class="error_message">
              {{ form.date.errors.as_text }}
          </span>
+         </p>
          </p>
          <p>
          <span style="color: red">*</span> Date of Birth {{ form.birth_date }}
