--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
@@ -21,10 +21,10 @@
           <span class="error_message">
               {{ form.name.errors.as_text }}
           </span>
-          <span style="color: red">*</span>  (name of participant), born <span style="color: red">*</span>  {{ form.birth_date }}
+          <span style="color: red">*</span>  (name of participant) <p>Born: <span style="color: red">*</span>  {{ form.birth_date }}
           <span class="error_message">
               {{ form.birth_date.errors.as_text }}
-          </span>, would like to participate in the
+          </span></p>, would like to participate in the
           C-Bar Horsemanship sponsored program(s). I acknowledge the potential
           risks involved in the various activities performed in the programs
           (e.g., horseback riding and other equine-assisted activities,
@@ -42,10 +42,10 @@
           <span class="error_message">
               {{ form.signature.errors.as_text }}
           </span>
-          <span style="color: red">*</span> Date: {{ form.date }}
+          <p><span style="color: red">*</span> Date: {{ form.date }}
           <span class="error_message">
               {{ form.date.errors.as_text }}
-          </span>
+          </span></p>
       </p>
 
       <input type="Submit" value="Submit" />
