[Re #81] Added link to Session Plan report in participant.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/participant.html
@@ -133,6 +133,14 @@
                 </a><br />
                 {% endfor %}
             </div>
+            <div class="floating_block">
+                <strong>Session Plans</strong><br />
+                {% for session_plan in session_plans %}
+                <a href="{% url 'report-session-plan' participant.participant_id session_plan.date.year session_plan.date.month session_plan.date.day %}">
+                    {{ session_plan.date }}
+                </a><br />
+                {% endfor %}
+            </div>
         </div>
     {% endif %}
 {% endblock %}
