[Re #34] Modified 'views.private_form_incidents' so it actually saves the 'Incidents' model instance to the DB. Added 'time' field to 'models.Incidents'. Set 'models.Incidents' PK to (participant_id, date, time). Increased 'Incidents.description' max_length to 2500.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/incidents.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/incidents.html
@@ -1,6 +1,6 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
-    <h1>Seizure Evaluation Incidents</h1>
+    <h1>Seizure Evaluation Incident</h1>
     {% if error_text %}
         <p><strong>
             {{ error_text }}
@@ -15,18 +15,26 @@
             </p>
 
             <p>
-                <strong>Date/Time:</strong> {{ form.date }}
+                <strong>Date:</strong> {{ form.date }}
                 <span class="error_message">
                     {{ form.date.errors.as_text }}
                 </span>
-                <strong>Details:</strong> {{ form.details }}
+
+                <strong>Time:</strong> {{ form.time }}
+                <span class="error_message">
+                    {{ form.time.errors.as_text }}
+                </span>
+            </p>
+            <p>
+                <strong>Details:</strong><br />
+                {{ form.details }}
                 <span class="error_message">
                     {{ form.details.errors.as_text }}
                 </strong>
             </p>
 
             <p>
-                <input style="submit" value="Submit" />
+                <input type="submit" value="Submit" />
             </p>
         </form>
     {% endif %}
